// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> accessible text with badge description matches its snapshot 1`] = `
<div
  className="y-avatar y-avatar__size-medium"
>
  <StyledCustomizedPersonaCoin
    hidePersonaDetails={true}
    imageShouldFadeIn={false}
    imageUrl="test.jpg"
    primaryText="NAME"
    size={12}
  />
  <ScreenreaderText>
    NAME - BADGE
  </ScreenreaderText>
</div>
`;

exports[`<Avatar /> accessible text without badge description matches its snapshot 1`] = `
<div
  className="y-avatar y-avatar__size-medium"
>
  <StyledCustomizedPersonaCoin
    hidePersonaDetails={true}
    imageShouldFadeIn={false}
    imageUrl="test.jpg"
    primaryText="NAME"
    size={12}
  />
  <ScreenreaderText>
    NAME
  </ScreenreaderText>
</div>
`;

exports[`<Avatar /> with additional className matches its snapshot 1`] = `
<div
  className="y-avatar y-avatar__size-medium TEST_CLASSNAME"
>
  <StyledCustomizedPersonaCoin
    hidePersonaDetails={true}
    imageShouldFadeIn={false}
    imageUrl="test.jpg"
    primaryText="NAME"
    size={12}
  />
  <ScreenreaderText>
    NAME
  </ScreenreaderText>
</div>
`;

exports[`<Avatar /> with badge content matches its snapshot 1`] = `
<div
  className="y-avatar y-avatar__size-xSmall"
>
  <StyledCustomizedPersonaCoin
    hidePersonaDetails={true}
    imageShouldFadeIn={false}
    imageUrl="test.jpg"
    primaryText="NAME"
    size={10}
  />
  <div
    className="y-avatar--badge y-avatar__size-xSmall--badge"
  >
    <Text>
      badge
    </Text>
  </div>
  <ScreenreaderText>
    NAME
  </ScreenreaderText>
</div>
`;

exports[`<Avatar /> with image url matches its snapshot 1`] = `
<div
  className="y-avatar y-avatar__size-medium"
>
  <StyledCustomizedPersonaCoin
    hidePersonaDetails={true}
    imageShouldFadeIn={false}
    imageUrl="test.jpg"
    primaryText="NAME"
    size={12}
  />
  <ScreenreaderText>
    NAME
  </ScreenreaderText>
</div>
`;

exports[`<Avatar /> with size matches its snapshot 1`] = `
<div
  className="y-avatar y-avatar__size-xLarge"
>
  <StyledCustomizedPersonaCoin
    hidePersonaDetails={true}
    imageShouldFadeIn={false}
    imageUrl="test.jpg"
    primaryText="NAME"
    size={14}
  />
  <ScreenreaderText>
    NAME
  </ScreenreaderText>
</div>
`;

exports[`<Avatar /> with soft border type matches its snapshot 1`] = `
<div
  className="y-avatar y-avatar__size-medium y-avatar__borderType-soft"
>
  <StyledCustomizedPersonaCoin
    hidePersonaDetails={true}
    imageShouldFadeIn={false}
    imageUrl="test.jpg"
    primaryText="NAME"
    size={12}
  />
  <ScreenreaderText>
    NAME
  </ScreenreaderText>
</div>
`;

exports[`<Avatar /> with too many characters matches its snapshot 1`] = `
<div
  className="y-avatar y-avatar__size-medium"
>
  <StyledCustomizedPersonaCoin
    hidePersonaDetails={true}
    imageShouldFadeIn={false}
    primaryText="First Last"
    size={12}
  />
  <ScreenreaderText>
    First Last
  </ScreenreaderText>
</div>
`;
